# nx-archive

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: cnmt.wikitext  nca.wikitext  ncmsvc.wikitext  nintendo_tweak.py  xci.wikitext
src/: error.rs  formats.rs  io.rs  lib.rs  main.rs  util.rs
src/formats/: cnmt.rs  hfs0.rs  keys.rs  keyset.rs  kv.rs  mod.rs  nca.rs  pfs0.rs  romfs.rs  title_keyset.rs  xci.rs
src/formats/cnmt/: enums.rs  extended_header.rs  mod.rs
src/formats/nca/: keys.rs  mod.rs  types.rs
test/: Browser.nsp.nstool_tree.txt  Browser.nsz  README.md  hfs2_mod.py
test/Browser-cnmt/: Application_0100c4c320c0ffee.cnmt
test/pfs0-dummy/: foobar.txt
